--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(DistillerGUI)
 
 # Add ALSA package requirement
 find_package(ALSA REQUIRED)
+# Add CURL package requirement
+find_package(CURL REQUIRED)
 
 # Add configuration paths
 add_definitions(-DLV_CONF_PATH="${CMAKE_CURRENT_SOURCE_DIR}/lv_conf.h")
@@ -39,6 +41,7 @@ add_executable(DistillerGUI
     background.c
     uart_input.c
     audio.c
+    api_client.c
 )
 
 # Include directories for the main executable
@@ -54,6 +57,7 @@ target_include_directories(DistillerGUI PUBLIC
     ${LVGL_DIR}/src/widgets
     ${LVGL_DIR}/src/display
     ${ALSA_INCLUDE_DIRS}
+    ${CURL_INCLUDE_DIRS}  # Add CURL include directories
 )
 
 # Link libraries
@@ -62,6 +66,7 @@ target_link_libraries(DistillerGUI PRIVATE
     pthread 
     gpiod 
     asound  # Explicitly link against ALSA
+    CURL::libcurl  # Add CURL library
 )
 
 # Add debug flags
